[package]
name = "gswww"
version = "1.2.1"
authors = ["Phillip Davies <philliptdavies@gmail.com>"]
description = "A Graphical Solution to your Wayland Wallpaper Woes"
edition = "2021"
license = "GPL-3.0-or-later"

# Thx Horus645 for these profiles
[profile.release]
debug = 0
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
lto = "thin"
debug = 1
strip = false

[dependencies]
directories = "6.0.0"
gtk = { version = "0.9.7", package = "gtk4", features = ["v4_10"] }
rayon = "1.10.0"
walkdir = "2.5.0"
