[package]
name = "gswww"
version = "1.3.1"
authors = ["Phillip Davies <philliptdavies@gmail.com>"]
description = "A Graphical Solution to your Wayland Wallpaper Woes"
edition = "2021"
license = "GPL-3.0-or-later"

# Thx Horus645 for these profiles
[profile.release]
debug = 0
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
lto = "thin"
debug = 1
strip = false

[dependencies]
gtk = { version = "0.10.0", package = "gtk4", features = ["v4_10"] }
rayon = "1.11.0"
# Image manipulation
fast_image_resize = { version = "5.2.1", features = ["image", "rayon"] }
image = "0.25.6"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
# Directory reading
walkdir = "2.5.0"
directories = "6.0.0"
